--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -159,7 +159,8 @@ input.ajust-input, textarea.ajust-input {
 			padding-left: 10px;
 			font-size:14px;
 			color: #000000;
-			font-family:"gotham-Bold";
+			font-family:"gotham";
+			font-weight: "bold";
 		}
 	}
 }
