--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -234,7 +234,8 @@
 			.texte{
 			background-color: black;
 			Color: white;
-			font-family:"gotham-Bold";
+			font-family:"gotham";
+			font-weight: "bold";
 			font-size: 14px;
 			text-align: center;
 			padding-left: 5px;
