--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -160,7 +160,7 @@ input.ajust-input, textarea.ajust-input {
 			font-size:14px;
 			color: #000000;
 			font-family:"gotham";
-			font-weight: "bold";
+			font-weight: bold;
 		}
 	}
 }
