--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -235,7 +235,7 @@
 			background-color: black;
 			Color: white;
 			font-family:"gotham";
-			font-weight: "bold";
+			font-weight: bold;
 			font-size: 14px;
 			text-align: center;
 			padding-left: 5px;
